public enum WeaponName
{
    None, Fist, Pan,Jumprope, Toypistol
}

public enum ClothesName
{
    None, Clothes01, Clothes02, Clothes03, Clothes04, Clothes05, Clothes06
}

public enum FeatureName
{
    None,Boy,Girl,CatMask,RabbitMask, Short, Skirt, Hair_Bright, Hair_Dark, Shirt_Accessories, Shirt_Plaid, Shirt_Pocket, Shirt_Printed
}

public enum SafeAreaCode
{
    None, Code01, Code02, Code03, Code04, Code05
}

public enum ProbabilityType
{
    None, Clothes, Feature, Weapon
}

public enum MoveAniType
{
    None,Idle, QuietWalk, Walk, Run,Jump,
}

public enum ActionAniType
{
    None, Pickup, PunchAttack, PanAttack, RopeAttack,
}

public enum SkillType
{
    None, Invisibility,
}

public enum PairState
{
    Lobby, CreatingRoom, InRoom
}